# stockpile

./: .gitignore  README.md  cheeblr.code-workspace  deploy_flake.nix  flake.nix  inventory.json  logfile  spago.yaml  sql-service.nix  stockpile.code-workspace  styles.css
Docs/: BackEnd.md  Dependencies.md  FrontEnd.md  NixDevEnvironment.md  SchemaGenerator.md  SecurityStrategies.md  TODO.md
backend/: cabal.project  cheeblr-backend.cabal  fourmolu.yaml  output
backend/app/: Main.hs
backend/codegen/: Inventory.lbf  Main.hs  SqlGenerator.hs  schema.dhall
backend/codegen/autogen_hs/LambdaBuffers/: Inventory.hs
backend/codegen/autogen_ps/LambdaBuffers/: Inventory.purs
backend/src/: API.hs  App.hs  Database.hs  Server.hs  Types.hs
backend/src/API/: Inventory.hs  Transaction.hs
backend/src/DB/: Database.hs  Transaction.hs
backend/src/Server/: Transaction.hs
backend/src/Types/: Inventory.hs  Transaction.hs
backend/src/migrations/: 001_initial_schema.sql  transaction_schema.sql
frontend/: app-styles.css  index.html  inventory.json  latestIssues.purs  spago.yaml  styles.css
frontend/src/: API.purs  Components.purs  CreateItem.purs  DataFetcher.purs  DeleteItem.purs  EditItem.purs  ExampleTxFlow.purs  Form.purs  LiveViewConfg.purs  LiveViewModule.purs  Main.purs  MenuLiveView.purs  NetworkConfig.purs  Route.purs  Types.purs  UUID.purs  UUUIDGen.purs  Utils.purs  Validation.purs  WithInterval.purs
frontend/src/API/: API.purs  Inventory.purs  Transaction.purs
frontend/src/Accounting/: CashRegister.purs  Compliance.purs  Integration.purs  Ledger.purs  Transaction.purs
frontend/src/Config/: InventoryFields.purs  LiveView.purs  Network.purs
frontend/src/Services/: API.purs  CashRegister.purs  Compliance.purs  Integration.purs  Ledger.purs
frontend/src/Types/: Common.purs  DiscreteUSD.purs  Inventory.purs  Transaction.purs  UUID.purs
frontend/src/UI/Common/: Form.purs  StateManager.purs
frontend/src/UI/Inventory/: CreateItem.purs  DeleteItem.purs  EditItem.purs  LiveInventoryView.purs  MenuLiveView.purs
frontend/src/UI/Transaction/: CreateTransaction.purs  TransactionHistory.purs
frontend/src/Utils/: Formatting.purs  Money.purs  UUUIDGen.purs  Validation.purs
frontend/test/Test/: Test.purs
nix/: deploy.nix  deploy_flake.nix  devShell.nix  frontend.nix  hix.nix  postgres-utils.nix  postgresql-config.nix  postgresql-service.nix  sql-docker.nix  sqlShell.nix  testbed.nix
src/: API.purs  AddItem.purs  BudView.purs  Constants.purs  CreateItem.purs  EditItem.purs  Fields.purs  FileSystem.js  FileSystem.purs  Form.purs  Inventory.purs  Main.purs  MenuLiveView.purs  Render.purs  Types.purs  UUID.purs  Utils.purs  Validation.purs
test/Test/: Test.purs
