cabal-version: 3.6
name: cheeblr-backend
version: 0.0.0.2
category: web
author: Harry Pray IV
maintainer: harryprayiv@harryprayiv.com
copyright: Harry Pray IV
homepage: https://github.com/harryprayiv/cheelbr/cheeblr-backend
bug-reports: https://github.com/harryprayiv/cheeblr/issues

flag use-pkg-config
    description: Use pkg-config to find libpq
    default: True
    manual: True

common shared-properties
    ghc-options: -Wall
                 -O2
    build-depends: base
                , servant
                , servant-server
                , transformers
                , aeson
                , wai
                , warp 
                , opaleye
                , postgresql-simple 
                , postgresql-libpq
                , text
                , uuid
                , time
                , mtl
                , scientific
                , vector
                , resource-pool
                , wai-cors
                , bytestring
                , unix
                , http-types
                , bytestring
                , http-types

library
    import: shared-properties
    exposed-modules: App, Database, Server, Types, API
    build-depends: refined
                , string-conversions
    hs-source-dirs: src

executable cheeblr-backend
    import: shared-properties
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: cheeblr-backend
    pkgconfig-depends: libpq