cabal-version: 3.6
name: stockpile-backend
version: 0.0.0.3
category: web
author: Harry Pray IV
maintainer: harryprayiv@harryprayiv.com
copyright: Harry Pray IV
homepage: https://github.com/harryprayiv/cheelbr/stockpile-backend
bug-reports: https://github.com/harryprayiv/stockpile/issues

flag use-pkg-config
    description: Use pkg-config to find libpq
    default: True
    manual: True

common shared-properties
    ghc-options: -Wall
                 -O2
    build-depends: base
                , servant
                , servant-server
                , transformers
                , aeson
                , wai
                , warp 
                , opaleye
                , postgresql-simple 
                , postgresql-libpq
                , text
                , uuid
                , time
                , mtl
                , scientific
                , vector
                , resource-pool
                , wai-cors
                , bytestring
                , unix
                , http-types
                , bytestring
                , http-types

library
    import: shared-properties
    exposed-modules: App
               , DB.Database
               , DB.Transaction
               , Server
               , Types.Inventory
               , Types.Transaction
               , API.Inventory
               , API.Transaction
    build-depends: refined
                , string-conversions
    hs-source-dirs: src

executable stockpile-backend
    import: shared-properties
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: stockpile-backend
    pkgconfig-depends: libpq

-- executable domain-modeler
--     import: shared-properties
--     main-is: SqlGenerator.hs
--     hs-source-dirs: codegen
--     build-depends: base
--                 , filepath
--                 , directory
--                 , dhall
--                 , text